--- a/web/src/index.css
+++ b/web/src/index.css
@@ -3,6 +3,15 @@ html {
   user-select: none;
 }
 
+* {
+  -ms-overflow-style: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
